--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-plugin-react-html-attrs": "^2.1.0",
+    "css-loader": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "style-loader": "^0.23.1"
   },
   "scripts": {
     "start": "react-scripts start",
