--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "css-loader": "^3.0.0",
+    "http-proxy-middleware": "^0.19.1",
+    "mockjs": "^1.0.1-beta3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "style-loader": "^0.23.1"
   },
+  "proxy": "https://api.apiopen.top",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -30,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
