--- a/react-app/package.json
+++ b/react-app/package.json
@@ -10,6 +10,8 @@
     "mockjs": "^1.0.1-beta3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "style-loader": "^0.23.1"
   },
