--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,6 +13,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
     "style-loader": "^0.23.1"
   },
   "proxy": "https://api.apiopen.top",
