--- a/react-app/package.json
+++ b/react-app/package.json
@@ -10,10 +10,12 @@
     "mockjs": "^1.0.1-beta3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1"
   },
   "proxy": "https://api.apiopen.top",
